--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fifth and President</title>
-  <script src=”https://aframe.io/releases/0.9.0/aframe.min.js”></script>
-  <script src=”https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js”></script>
+<html>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <!-- we import arjs version without NFT but with marker + location based support -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs=’sourceType: webcam; debugUIEnabled: false;’>
-
-      <a-marker preset=’hiro’’>
-
-      <a-box position=’0 1 0′ material=’opacity: 0.5; color: #F70087;’></a-box>
-
+    <a-scene embedded arjs>
+      <a-marker preset="hiro">
+        <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        ></a-entity>
       </a-marker>
-
       <a-entity camera></a-entity>
-
-      </a-scene>
+    </a-scene>
   </body>
 </html>
