adding basic entity

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
         <a-marker preset="hiro">
+          <a-text value='Testing Testing'
+                  position='1 1 1'
+          ></a-text>
           <a-entity
             position="0 0 0"
             scale="0.05 0.05 0.05"
