changing to flat image

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
 
         <a-marker preset="hiro">
 
-            <a-curvedimage src="#milkweed-image" height="3.0" radius="5.7" theta-length="270"
-                 rotation="0 100 0" scale="0.8 0.8 0.8"></a-curvedimage>
+            <a-image src="#milkweed-image" height="3" width='3'
+                 scale="0.8 0.8 0.8"></a-curvedimage>
 
           <a-text value='Testing Testing'
                   position='0 1 -1'
