--- a/public/index.html
+++ b/public/index.html
@@ -19,17 +19,15 @@
 
         <a-marker preset="hiro">
 
-            <a-image src="#milkweed-image" height="3" width='3'
-                 scale="0.8 0.8 0.8"></a-curvedimage>
+            <a-image src="#milkweed-image"
+                     height="3"
+                     width='3'
+                     ></a-image>
 
-          <a-text value='Testing Testing'
-                  position='0 1 -1'
-          ></a-text>
-          <a-entity
-            position="0 0 0"
-            scale="0.05 0.05 0.05"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-          ></a-entity>
+            <a-text value='Testing Testing'
+                    position='0 1 -1'
+                    ></a-text>
+
         </a-marker>
         <a-entity camera></a-entity>
       </a-scene>
