--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,16 @@
 
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-       
+        <a-assets>
+            <img id='milkweed-image'
+                 src='https://www.gardendesign.com/pictures/images/900x705Max/dream-team-s-portland-garden_6/milkweed-plant-monarch-butterfly-shutterstock-com_12623.jpg'
+                 >
+        </a-assets>
+
 
         <a-marker preset="hiro">
 
-            <a-image src="https://www.gardendesign.com/pictures/images/900x705Max/dream-team-s-portland-garden_6/milkweed-plant-monarch-butterfly-shutterstock-com_12623.jpg"
-                     height="3"
-                     width='3'
-                     ></a-image>
+            <a-image src='#milkweed-image'></a-image>
 
             <a-text value='Testing Testing'
                     position='0 1 -1'
