changed image url

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <a-scene embedded arjs>
         <a-assets>
             <img id='milkweed-image'
-                 src='https://www.gardendesign.com/pictures/images/900x705Max/dream-team-s-portland-garden_6/milkweed-plant-monarch-butterfly-shutterstock-com_12623.jpg'
-                 >
+                 src='https://www.fs.fed.us/wildflowers/plant-of-the-week/images/commonmilkweed/Asclepias_syriaca_7A.jpg'
+            >
         </a-assets>
 
 
