brought in image file

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <a-scene embedded arjs>
         <a-assets>
             <img id='milkweed-image'
-                 src='https://www.fs.fed.us/wildflowers/plant-of-the-week/images/commonmilkweed/Asclepias_syriaca_7A.jpg'
+                 src='../public/assets/images/milkweed.jpg'
             >
         </a-assets>
 
