--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,12 @@
 
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-        <a-assets>
-            <img id='milkweed-image'
-                 src='../public/assets/images/milkweed.jpg'
-            >
-        </a-assets>
+
 
 
         <a-marker preset="hiro">
 
-            <a-image src='#milkweed-image'></a-image>
+            <a-image src='assets/images/milkweed.jpg'></a-image>
 
             <a-text value='Testing Testing'
                     position='0 1 -1'
